--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -16,5 +16,5 @@ jobs:
           github_token: ${{secrets.GITHUB_TOKEN}}
           workflow: ci.yml
           workflow_conclusion: success
-          repo: arturcic/libgit2sharp.nativebinaries
+          repo: libgit/libgit2sharp.nativebinaries
           name: NuGet package
