--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -5,9 +5,9 @@ jobs:
   node-docker:
     runs-on: ubuntu-latest
     container:
-      image: node:14.15.0-alpine3.12
+      image: gittools/build-images:ubuntu.20.04-sdk-6.0
     steps:
          - name: Log the node version
            run: |
-             node -v
              cat /etc/os-release 
+             dotnet --info
