--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -2,7 +2,11 @@ name: test
 
 on:
   workflow_dispatch:
-
+    inputs:
+      branch:
+        description: 'Define branch name'     
+        required: true
+        default: 'master'
 jobs:
   # This workflow contains a single job called "build"
   build:
@@ -10,10 +14,14 @@ jobs:
     name: download artifacts
     runs-on: ubuntu-latest
     steps:
+      -
+        name: Log inputs
+        run: echo ${{github.event.inputs.name}}
       - name: Download artifact
         uses: dawidd6/action-download-artifact@v2
         with:
           workflow: ci.yml
           workflow_conclusion: success
-          repo: libgit2/libgit2sharp.nativebinaries
+          repo: arturcic/libgit2sharp.nativebinaries
           name: NuGet package
+          
